--- a/g/ge/get/getpaidmail.com.html
+++ b/g/ge/get/getpaidmail.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the getpaidmail.com privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603194718id_/http%3A//www.getpaidmail.com/pages/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the getpaidmail.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207195316id_/http%3A//www.getpaidmail.com/pages/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>GetPaidMail.com</title>
@@ -63,7 +63,7 @@ window.external.AddFavorite(bookmarkurl,bookmarktitle)
   <tbody><tr>
     <td align="left"><img src="http://www.getpaidmail.com/images/logo_1.jpg" width="333" height="130" alt="" border="0"></td>
 	<td width="100%" align="center" valign="middle">
-	<table border="0" cellpadding="0" cellspacing="0" bgcolor="ffffff"><tbody><tr><td><a href="http://www.getpaidmail.com/scripts/runner.php?BA=643&amp;url=http%3A%2F%2Fwww.fivestarsmail.com%2Fpages%2Findex.php%3Frefid%3D203" target="_blank"><img src="http://www.getpaidmail.com/scripts/runner.php?REDIRECT=http%3A%2F%2Fwww.fivestarsmail.com%2Fbanner1.gif" alt="" border="0"></a></td></tr></tbody></table></td>    
+	<table border="0" cellpadding="0" cellspacing="0" bgcolor="ffffff"><tbody><tr><td><a href="http://www.getpaidmail.com/scripts/runner.php?BA=661&amp;hash=e26becb2ae892f7bf7b5ffd159fea22d&amp;url=http%3A%2F%2Fwww.myfreeshares.com%2Findex.php%3Fref%3Dworkforu" target="_blank"><img src="http://www.getpaidmail.com/scripts/runner.php?REDIRECT=http%3A%2F%2Fwww.myfreeshares.com%2F468x60.gif" alt="" border="0"></a></td></tr></tbody></table></td>    
   </tr>
 </tbody></table>
 <table cellspacing="0" cellpadding="0" width="100%" border="0">
@@ -177,19 +177,10 @@ document.write('<a href="javascript:addbookmark()">BOOKMARK US!</a>')
     <td width="140" bgcolor="efefef" class="link">
 	<div align="center"><font face="Verdana,Geneva,Arial,Helvetica,sans-serif," color="#ff0000" size="2"><strong>Linkit Links :</strong></font></div> <center>
      <a href="https://www.paypal.com/subscriptions/business=webmaster@getpaidmail.com&amp;item_name=linkit+Link+1+month&amp;item_number=5&amp;no_shipping=1&amp;return=http%3A//www.getpaidmail.com/&amp;no_note=1 cy_code=USD&amp;a3=2.00&amp;p3=30&amp;t3=D&amp;src=1&amp;sra=1" class="toplink"><b><font color="#000000">Your Ad Here!</font></b></a>
-<br><a href="http://www.snygl.com/index.php?id=87&amp;p=0">Let's Snygl</a>
-<br><a href="http://www.itpaystolearn.com/default.asp?ref_id=AKQ748">It Pays to Learn</a>
-<br><a href="http://www.2dollaremails.com/paidmail/site/index.php?refid=2614">2DollarEmails</a>
-<br><a href="http://www.rollofhundreds.com/mlm/b.php?rid=6126">RolOfHundreds</a>
-<br><a href="http://www.ksalohateam.com/HotBucks">HotBucks!</a><a href="http://megahot.us/five/?ref=2" target="_blank" class="left">NEW 5$ matrix</a>
-<a href="http://www.affablesite.com/pages/index.php?refid=wages" target="_blank" class="left">10-40c for link!</a>
-<a href="http://submaster.rrudder.com/members/dream1/" target="_blank" class="left">SubMaster!</a>
-<a href="http://www.fundAfriend.com" target="_blank">Get donations for your cause</a> <a href="http://www.awc-hosting.com" target="_blank">Host your PTR for only $7.95</a>    <a href="http://alexahits.com/raffle.htm" target="_blank">10 Million Banner IMP for $1.00</a>
-<a href="http://www.searchdabest.com/" target="_blank">SearchDa'Best!!</a>	
- <a href="http://careerjobs.bizland.com" target="_blank">Home Assemblers Needed</a>
-     <a href="http://freehotel.netfirms.com" target="_blank">Free Hotel * Shopping * Casino</a>
-                 &nbsp;&nbsp;<a href="http://www.linkitysplit.com/12374/index.shtml" target="_blank">Over 6 million dollars in 10 years</a>
-    <a href="http://www.foreign-fund.com/index.php?ref=realcash4u" target="_blank">FREE $10 E-Gold</a><br>
+
+
+<a href="http://www.true-money.com/ee/" target="blank">Turn $29.99 Into $349,859.00!</a><br><a href="http://www.morebid.com" target="blank">$5,000.00 Worth of credits? </a><br><a href="http://www.searchdabest.com/" target="_blank">SearchDa'Best!!</a>  <a href="http://freehotel.netfirms.com" target="_blank">Free Hotel * Shopping * Casino</a>
+ <br>
     </center>
     </td>
   </tr>
@@ -203,15 +194,14 @@ document.write('<a href="javascript:addbookmark()">BOOKMARK US!</a>')
 <table style="BORDER-COLLAPSE: collapse" cellspacing="0" bordercolordark="5c7181" cellpadding="0" width="140" bordercolorlight="5c7181" border="1">
   <tbody><tr>
     <td bgcolor="FBE9B4" class="link">
-	<div align="center"><font face="Verdana,Geneva,Arial,Helvetica,sans-serif," color="#ff0000" size="2"><strong>Total members 1,762</strong></font></div>
+	<div align="center"><font face="Verdana,Geneva,Arial,Helvetica,sans-serif," color="#ff0000" size="2"><strong>Total members 3,847</strong></font></div>
     </td>
   </tr>
 </tbody></table>
 <hr width="95%" size="1" color="#FFFFFF">
-<center><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><a target="_blank" href="http://www.qksrv.net/click-1455909-5294851">free MP3DANCER</a><img src="http://www.qksrv.net/image-1455909-5294851" width="1" height="1" border="0"></td></tr></tbody></table><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><a target="_blank" href="http://www.qksrv.net/click-1455909-10296082">Lloyds TSB</a><img src="http://www.qksrv.net/image-1455909-10296082" width="1" height="1" border="0"></td></tr></tbody></table><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><a target="_blank" href="http://www.qksrv.net/click-1455909-4066721">T-ShirtKing</a><img src="http://www.qksrv.net/image-1455909-4066721" width="1" height="1" border="0"></td></tr></tbody></table><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><a target="_blank" href="http://www.qksrv.net/click-1455909-1194345">FREE mouse pad<img src="http://www.qksrv.net/image-1455909-1194345" width="1" height="1" border="0"></a></td></tr></tbody></table><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><a target="_blank" href="http://www.qksrv.net/click-1455909-5048476">Register on eBay!</a><img src="http://www.qksrv.net/image-1455909-5048476" width="1" height="1" border="0"></td></tr></tbody></table><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><a target="_blank" href="http://www.qksrv.net/click-1455909-10295953">Screentrade</a><img src="http://www.qksrv.net/image-1455909-10295953" width="1" height="1" border="0"></td></tr></tbody></table><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><a target="_blank" href="http://www.qksrv.net/click-1455909-10291246">What Causes Allergies?</a><img src="http://www.qksrv.net/image-1455909-10291246" width="1" height="1" border="0"></td></tr></tbody></table><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><a target="_blank" href="http://www.qksrv.net/click-1455909-10289992">PetCareCentral</a><img src="http://www.qksrv.net/image-1455909-10289992" width="1" height="1" border="0"></td></tr></tbody></table><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><a target="_blank" href="http://www.qksrv.net/click-1455909-10293396">
-Win Free Shoes</a><img src="http://www.qksrv.net/image-1455909-10293396" width="1" height="1" border="0"></td></tr></tbody></table><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><a target="_blank" href="http://www.qksrv.net/click-1455909-10351963"> Name Trains<img src="http://www.qksrv.net/image-1455909-10351963" width="1" height="1" border="0"></a></td></tr></tbody></table><hr width="95%" size="1" color="#FFFFFF">
+<center><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><a target="_blank" href="http://www.qksrv.net/click-1455909-9782246">Vitamins</a><img src="http://www.qksrv.net/image-1455909-9782246" width="1" height="1" border="0"></td></tr></tbody></table><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><a target="_blank" href="http://www.qksrv.net/click-1455909-10285198">TravelTools</a><img src="http://www.qksrv.net/image-1455909-10285198" width="1" height="1" border="0"></td></tr></tbody></table><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><a target="_blank" href="http://www.qksrv.net/click-1455909-5062582">Baby Bazaar</a><img src="http://www.qksrv.net/image-1455909-5062582" width="1" height="1" border="0"></td></tr></tbody></table><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><a target="_blank" href="http://www.qksrv.net/click-1455909-2697451">jigsaw puzzles</a><img src="http://www.qksrv.net/image-1455909-2697451" width="1" height="1" border="0"></td></tr></tbody></table><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><a target="_blank" href="http://www.qksrv.net/click-1455909-9756529">Car Loans</a><img src="http://www.qksrv.net/image-1455909-9756529" width="1" height="1" border="0"></td></tr></tbody></table><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><a target="_blank" href="http://www.qksrv.net/click-1455909-10356486">Diner for FREE!</a><img src="http://www.qksrv.net/image-1455909-10356486" width="1" height="1" border="0"></td></tr></tbody></table><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><a target="_blank" href="http://www.qksrv.net/click-1455909-10296694">Italian Charms</a><img src="http://www.qksrv.net/image-1455909-10296694" width="1" height="1" border="0"></td></tr></tbody></table><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><a target="_blank" href="http://www.qksrv.net/click-1455909-10284055">TicketsNow</a><img src="http://www.qksrv.net/image-1455909-10284055" width="1" height="1" border="0"></td></tr></tbody></table><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><a target="_blank" href="http://www.qksrv.net/click-1455909-1200209">Powerful Hosting$7.95</a><img src="http://www.qksrv.net/image-1455909-1200209" width="1" height="1" border="0"></td></tr></tbody></table><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><a target="_blank" href="http://www.qksrv.net/click-1455909-10305035">midPhase Hosting$7.95</a><img src="http://www.qksrv.net/image-1455909-10305035" width="1" height="1" border="0"></td></tr></tbody></table><hr width="95%" size="1" color="#FFFFFF">
 <br>
-<center><br> 
+<center><br><table border="0" cellpadding="0" cellspacing="0" bgcolor="ffffff"><tbody><tr><td><a href="http://www.getpaidmail.com/scripts/runner.php?BA=811&amp;hash=ed7dbf889f831d69020d1f91778f8ddd&amp;url=http%3A%2F%2Fhop.clickbank.net%2F%3Fcoffee123%2Fcybersam" target="_blank"><img src="http://www.getpaidmail.com/scripts/runner.php?REDIRECT=http%3A%2F%2Fwww.pctattletale.com%2Fim%2Fboxpctt2.gif" alt="" border="0"></a></td></tr></tbody></table> 
 </center>
 </center>
     </td>
@@ -229,14 +219,34 @@ Win Free Shoes</a><img src="http://www.qksrv.net/image-1455909-10293396" width="
 
 <table cellspacing="0" cellpadding="0" bgcolor="#ffffff" border="0">
   <tbody><tr>
-    <td><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><script language="javascript">
-    document.write("<a target=_blank href='http://banners.linkbuddies.com/click.php?id=216479'><img src='http://banners.linkbuddies.com/image.php?id=216479&ref=" + document.referrer + "' width=468 height=60 alt='Click Here' border=0></a><br><a target=_blank href='http://www.linkbuddies.com/?ref=103636'><img src='http://www.linkbuddies.com/lb/img/bottom468x14.gif' alt='Click here for LinkBuddies' border=0></a>");
-</script><a target="_blank" href="http://banners.linkbuddies.com/click.php?id=216479"><img src="http://banners.linkbuddies.com/image.php?id=216479&amp;ref=" width="468" height="60" alt="Click Here" border="0"></a><br><a target="_blank" href="http://www.linkbuddies.com/?ref=103636"><img src="http://www.linkbuddies.com/lb/img/bottom468x14.gif" alt="Click here for LinkBuddies" border="0"></a>
-<noscript>
-    <a target=_blank href="http://banners.linkbuddies.com/click.php?id=216479"><img src="http://banners.linkbuddies.com/image.php?id=216479" width=468 height=60 alt="Click Here" border=0></a><br><a target=_blank href="http://www.linkbuddies.com/?ref=103636"><img src="http://www.linkbuddies.com/lb/img/bottom468x14.gif" alt="Click here for LinkBuddies" border=0></a>
-</noscript></td></tr></tbody></table></td>
+    <td>
+<table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><!-- Clicksor.com Advertising Code Begin -->
+<script type="text/javascript">
+<!--
+//default house ad url 
+clicksor_default_url = '';
+clicksor_enable_pop = false;
+//-->
+</script>
+<script type="text/javascript" src="http://www.clicksor.com/bannerad.php?pid=3718&amp;sid=4729&amp;adtype=2"></script>
+<!-- Clicksor.com Advertising Code End --></td></tr></tbody></table>
+
+</td>
   </tr>
-</tbody></table><br><a href="http://www.getpaidmail.com/pages/advertise.php?" target="_blank"><font size="4" color="#000000">$$$ 1 Year Unlimited TOP Banner Impressions on Both of our Sites! Only $7.00!! $$$</font></a><br>
+</tbody></table><br><a href="http://www.getpaidmail.com/pages/advertise.php?" target="_blank"><font size="4" color="#000000">$$$0.25 Cent Email to all Members!!Only $1.99 and More!!! $$$</font></a><br>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -341,7 +351,7 @@ visitor.
 getpaidmail.com gives users the following options for removing their
 information from our database to not receive future communications or to no
 longer receive our service.
-You can <a href="/pages/contact.php?PHPSESSID=7b2275baddc8106f392d4fad9b7493c63lihw5t8j0n312l9tc6j38sz86194717">Contact Us</a> and request your membership
+You can <a href="/pages/contact.php?PHPSESSID=43f8be3c8ad4e09daf76ef232562b6fcnenaulhqjygegtfnlnchcbypbd195310">Contact Us</a> and request your membership
 to be cancelled at anytime.
 
 <center><br><font size="3" face="arial"><b>Correct/Update:</b></font></center>
@@ -351,7 +361,7 @@ Members Area - login and change your personal information.
 Contacting the Web Site
 If you have any questions about this privacy statement, the practices of
 this site, or your dealings with getpaidmail.com, you can
-<a href="/pages/contact.php?PHPSESSID=7b2275baddc8106f392d4fad9b7493c63lihw5t8j0n312l9tc6j38sz86194717">Contact Us</a></font>
+<a href="/pages/contact.php?PHPSESSID=43f8be3c8ad4e09daf76ef232562b6fcnenaulhqjygegtfnlnchcbypbd195310">Contact Us</a></font>
 
 <br><br><br><center>
 <table bgcolor="#FBE9B4" bordercolor="#008080" style="BORDER-COLLAPSE: collapse" height="60" cellspacing="0" cellpadding="0" width="468" border="1">
@@ -359,7 +369,7 @@ this site, or your dealings with getpaidmail.com, you can
    <td>
     <table cellspacing="0" cellpadding="0" border="0">
   <tbody><tr>
-    <td style="padding-left:5"><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><a target="_blank" href="http://www.smile-email.com/pages/index.php?refid=kerriritter">Smile Mail</a><a></a></td></tr></tbody></table></td>
+    <td style="padding-left:5"><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><a target="_blank" href="http://www.cobbermail.com/pages/index.php?refid=berrevoets">Cobbermail/a&gt;</a></td></tr></tbody></table></td>
   </tr>
 </tbody></table>
 
@@ -370,7 +380,7 @@ this site, or your dealings with getpaidmail.com, you can
 
 <table cellspacing="0" cellpadding="0" border="0">
   <tbody><tr>
-    <td style="padding-left:5"><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><a target="_blank" href="http://www.certifiedhost.com">"The Cuttingedge in Hosting, Affiliates Make $$$$"</a></td></tr></tbody></table></td>
+    <td style="padding-left:5"><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><a target="_blank" href="http://www.nature-photo.net/getpaid/last-zone/last-zone.html">Best Search for International</a></td></tr></tbody></table></td>
   </tr>
 </tbody></table>
 
@@ -386,24 +396,7 @@ this site, or your dealings with getpaidmail.com, you can
 </tbody></table></td>
   </tr>
 </tbody></table>
- 
-<table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><!-- begin clickXchange, v2.4, Fixed Advertisement, copyright 2004 -->
-<!-- Advertiser URL: http://www.webtraffichosting.com -->
-<!-- Approved Affiliate URL: http://www.getpaidmail.com -->
-<a target="_blank" href="http://www.clickXchange.com/fr.phtml?act=1310276.48">Web site target traffic for your website</a><br> - 
-Buy targeted website traffic and increase your internet promotion.<br>You can increase your hits and unique
-visitors today
-<img src="http://www.clickXchange.com/ft.phtml?act=1310276.48" border="0" width="1" height="1">
-<!-- end clickXchange, v2.4 --></td></tr></tbody></table><!-- Begin CompactBanner.com Code -->
-<script language="JavaScript">
-var max="0";
-var site="edelweis";
-var host="edelweis";
-</script>
-<script language="JavaScript" src="http://server2.compactbanner.com/media468/initb.php">
-</script>
-<!-- End CompactBanner.com Code -->
-<table border="0" cellpadding="0" cellspacing="0" bgcolor="ffffff"><tbody><tr><td><a href="http://www.getpaidmail.com/scripts/runner.php?BA=702&amp;url=http%3A%2F%2Fwww.shareadspace.com%2Fpromote.php%3FmemberId%3D67" target="_blank"><img src="http://www.getpaidmail.com/scripts/runner.php?REDIRECT=http%3A%2F%2Fwww.shareadspace.com%2Fbanner.gif" alt="" border="0"></a></td></tr></tbody></table> <center><script type="text/javascript" language="JavaScript" src="http://www.dutchleader.com/php/banex/view.php?id=getpaidmail"></script></center>
+ <table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><script language="javascript" src="http://ad.trafficmp.com/tmpad/banner/ad/tmp.asp?poID=eltc"></script></td></tr></tbody></table><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><center><script type="text/javascript" language="JavaScript" src="http://www.dutchleader.com/php/banex/view.php?id=getpaidmail"></script></center></td></tr></tbody></table></center>
 
 
  
@@ -411,7 +404,7 @@ var host="edelweis";
 <div align="center"><center>
 </center></div><table width="100%" height="94" border="0" cellspacing="0" cellpadding="0" align="center" background="http://www.getpaidmail.com/images/bg_4.gif">
 <tbody><tr>
-	<td align="center" valign="middle"><table border="0" cellpadding="0" cellspacing="0" bgcolor="ffffff"><tbody><tr><td><a href="http://www.getpaidmail.com/scripts/runner.php?BA=645&amp;url=http%3A%2F%2Fasapwebsites.com%2F" target="_blank"><img src="http://www.getpaidmail.com/scripts/runner.php?REDIRECT=http%3A%2F%2Fasapwebsites.com%2Fimages%2Fbanner.gif" alt="" border="0"></a></td></tr></tbody></table></td>
+	<td align="center" valign="middle"><table border="0" cellpadding="0" cellspacing="0" bgcolor="ffffff"><tbody><tr><td><a href="http://www.getpaidmail.com/scripts/runner.php?BA=774&amp;hash=3bf55f0b54881bf217710583814f8ef7&amp;url=http%3A%2F%2Fwww.4inkjetprinter.com" target="_blank"><img src="http://www.getpaidmail.com/scripts/runner.php?REDIRECT=http%3A%2F%2Fwww.vipnetservices.com%2Fbanner%2Fbanner1.gif" alt="" border="0"></a></td></tr></tbody></table></td>
 
 </tr>
 <tr> 	<td align="center"><b> 
@@ -439,4 +432,5 @@ Reserved</font><br></b></td>
 
 
 
-</center></td></tr></tbody></table></td></tr></tbody></table></body></html>
+
+</td></tr></tbody></table></td></tr></tbody></table></body></html>
