--- a/p/pr/prl/prleap.com.html
+++ b/p/pr/prl/prleap.com.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the prleap.com privacy policy that was archived on 2004-06-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040607212759id_/http%3A//www.prleap.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the prleap.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207201945id_/http%3A//www.prleap.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>
 Privacy Policy - PR Leap - Beta</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<meta name="description" content="PR Leap is the Internet news distribution service that accelerates the search visibility of press releases, making them more accessible to search engines, consumers, analysts, journalists, newswires, and websites.">
+<meta name="description" content="PR Leap is the press release distribution service that increases the search visibility of press releases, making them more accessible for search engines, consumers, journalists, and bloggers.">
 <meta name="keywords" content="search visibility, press release distribution, PR Leap, press release, newswire, news, search engine optimization, search marketing, submit press release, rss, public relations, publicity">
 <meta name="robots" content="index,follow">
 <meta name="title" content="Privacy Policy - PR Leap - Beta">
@@ -19,22 +19,22 @@ Privacy Policy - PR Leap - Beta</title>
 <table width="100%" border="0" cellspacing="0" cellpadding="0" height="100" class="logo">
 	<tbody><tr>
 		<td width="10">
-			&nbsp;<script language="JavaScript" type="text/javascript">client_id = 6;</script><script language="JavaScript" src="http://clickstream.condesainc.com/beacon.js" type="text/javascript"></script><noscript><img src="http://clickstream.condesainc.com/image.php?client_id=6" width="1" height="1" /></noscript>
+			&nbsp;
 		</td>
 		<td width="250"><a href="/"><img src="/includes/images/prleap.gif" width="250" height="100" border="0" alt="PR Leap - Accelerating Search Visibility"></a></td>
 	</tr>
 </tbody></table>
 <table width="100%" border="0" cellspacing="0" cellpadding="0" height="30" background="/includes/images/nav_bg.gif">	
 	<tbody><tr>
-		<td width="10" class="navbar">
-			&nbsp;
+		<td width="10" class="navbar">&nbsp;
+			
 		</td>
 		<td class="navbar">
 			<a href="/index.html" class="nav">Home</a>
 			&nbsp;|&nbsp;
 			<a href="/about_us.html" class="nav">About Us</a>
 			&nbsp;|&nbsp;
-			<a href="/contact_us.html" class="nav">Contact Us</a>
+			<a href="/contact_us.html" class="nav">Contact PR Leap</a>
 			&nbsp;|&nbsp;
 			<a href="/faq.html" class="nav">FAQ</a>
 			&nbsp;|&nbsp;
