--- a/b/bo/boa/boaterexam.com.html
+++ b/b/bo/boa/boaterexam.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the boaterexam.com privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603103227id_/http%3A//boaterexam.com/privacy1.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the boaterexam.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207210954id_/http%3A//www.boaterexam.com/privacy1.html) for the most accurate reproduction.-->
 
 <html><!-- #BeginTemplate "/Templates/english.dwt" --><!-- DW6 --><head>
 <!-- #BeginEditable "doctitle" --><title>BoaterExam.Com</title><!-- #EndEditable --> 
@@ -14,7 +14,7 @@ self.name = "mainWin"; }
 boating license, operator license, operator card, operators license, operators card, boat exam, boat license, sos inc, skipper online, skipper online services,
 clnc inc., boating license french, boating exam, boating exam french, safe boating, safe boating training, safe boating exam, boating canada, canada boating, canadian boating,
 canadian coast guard, coast guard, boating certification"><!-- #EndEditable --> 
-<link href="/Includes/bexstyle.css" rel="stylesheet" type="text/css">
+<link href="/Includes/bexstyle_v2.css" rel="stylesheet" type="text/css">
 <script language="JavaScript" type="text/JavaScript">
 <!--
 
@@ -37,8 +37,8 @@ function mhHover(tbl, idx, cls)
 				<tbody><tr> 
 				<td valign="BOTTOM" align="LEFT"> <br> 
 				  <img src="/Images/spacer_black.gif" width="98" height="22" border="0"></td>
-					<td width="490" align="CENTER" valign="TOP" nowrap=""><img src="/images/logos/FNCC_43.gif" alt="FNCC" width="43" height="52" vspace="5"><a href="http://www.boaterexam.com/"><img src="/images/logos/BEX_357.gif" alt="BoaterExam.com Licensing Canada's Boaters" width="357" height="63" border="0"></a></td>
-					<td valign="BOTTOM" align="RIGHT"><a href="http://www.examenbateau.com/"><img src="/Images/francais.gif" width="98" height="22" border="0" alt="francais"></a></td>
+					<td width="490" align="CENTER" valign="TOP" nowrap=""><a href="http://www.boaterexam.com/"><img src="/images/logos/BEX_357.gif" alt="BoaterExam.com Licensing Canada's Boaters" width="357" height="63" border="0"></a></td>
+					<td valign="BOTTOM" align="RIGHT"><a href="http://www.examenbateau.com/"><img src="/Images/francais.gif" width="98" height="22" border="0" alt="francais: Examen Bateau"></a></td>
 				</tr>
 			</tbody></table></td>
 	</tr>
@@ -47,30 +47,31 @@ function mhHover(tbl, idx, cls)
 				<table border="0" cellpadding="0" cellspacing="0">
 					<tbody><tr> 
 						<td height="19" nowrap="" class="lt0" onmouseenter="mhHover('localToolbar', 0, 'lt1')" onmouseleave="mhHover('localToolbar', 0, 'lt0')"> 
-							<a href="http://www.boaterexam.com/" title="Overview of the online exam process." class="hdrmenu2">HOME</a></td>
+							<a href="http://www.boaterexam.com/" title="BoaterExam.com home page" class="hdrmenu2">HOME</a></td>
 						<td><span class="ltsep">|</span></td>
 						<td height="19" nowrap="" class="lt0" onmouseenter="mhHover('localToolbar', 2, 'lt1')" onmouseleave="mhHover('localToolbar', 2, 'lt0')"> 
-							<a href="/overview1.html" title="Overview of the online exam process." class="hdrmenu2">ONLINE 
+							<a href="http://www.boaterexam.com/overview1.html" title="Get your boating license on the Internet.  Overview." class="hdrmenu2">ONLINE 
 							EXAM</a></td>
 						<td><span class="ltsep">|</span></td>
 						<td height="19" nowrap="" class="lt0" onmouseenter="mhHover('localToolbar', 4, 'lt1')" onmouseleave="mhHover('localToolbar', 4, 'lt0')"> 
-							<a href="/Training/training1.html" title="Study for the exam for free." class="hdrmenu2">FREE 
+							<a href="http://www.boaterexam.com/Training/training1.html" title="Study for the exam with this free safe boating manual." class="hdrmenu2">FREE 
 							TRAINING</a></td>
 						<td><span class="ltsep">|</span></td>
-						<td height="19" nowrap="" class="lt0" onmouseenter="mhHover('localToolbar', 6, 'lt1')" onmouseleave="mhHover('localToolbar', 6, 'lt0')"><a href="/boater/login1.aspx?REDIR=REPL" title="Study for the exam for free." class="hdrmenu2">LOST 
+						<td height="19" nowrap="" class="lt0" onmouseenter="mhHover('localToolbar', 6, 'lt1')" onmouseleave="mhHover('localToolbar', 6, 'lt0')">
+						<a href="http://www.boaterexam.com/boater/login1.aspx?REDIR=REPL" title="Replace your lost or stolen Operator Card." class="hdrmenu2">LOST 
 							CARDS</a></td>
 						<td><span class="ltsep">|</span></td>
-						<td height="19" nowrap="" class="lt0" onmouseenter="mhHover('localToolbar', 8, 'lt1')" onmouseleave="mhHover('localToolbar', 8, 'lt0')"><a href="/faq1.html" title="Answers to frequently asked questions." class="hdrmenu2">FAQ</a></td>
+						<td height="19" nowrap="" class="lt0" onmouseenter="mhHover('localToolbar', 8, 'lt1')" onmouseleave="mhHover('localToolbar', 8, 'lt0')">
+						<a href="http://www.boaterexam.com/faq1.html" title="Answers to frequently asked questions." class="hdrmenu2">FAQ</a></td>
 						<td><span class="ltsep">|</span></td>
-						<td height="19" nowrap="" class="lt0" onmouseenter="mhHover('localToolbar', 10, 'lt1')" onmouseleave="mhHover('localToolbar', 10, 'lt0')"><a href="/corporate/contact1.html" title="How to contact BoaterExam.com and general corporate information." class="hdrmenu2">CONTACT</a></td>
+						<td height="19" nowrap="" class="lt0" onmouseenter="mhHover('localToolbar', 10, 'lt1')" onmouseleave="mhHover('localToolbar', 10, 'lt0')">
+						<a href="http://www.boaterexam.com/corporate/contact1.html" title="How to contact BoaterExam.com and general corporate information." class="hdrmenu2">CONTACT</a></td>
 					</tr>
 				</tbody></table>
 			</div></td>
 	</tr>
 </tbody></table>
-<br>
-<br><!-- #EndLibraryItem --><br>
-<!-- #BeginEditable "body" -->
+<br><!-- #EndLibraryItem --><!-- #BeginEditable "body" -->
 <table width="620" border="0" cellspacing="0" cellpadding="0" align="CENTER">
 <tbody><tr>
 <td>
@@ -85,7 +86,7 @@ function mhHover(tbl, idx, cls)
 		due to technical problems, during the registration process.</p>
 	  <p>If you do not receive your card within 90 days of passing your exam, please 
 		contact <a href="mailto:info@boaterexam.com">info@boaterexam.com</a>. 
-		Waiting beyond the 90 days will result in a $15 fee to have another card 
+		Waiting beyond the 90 days will result in a $20 fee to have another card 
 		issued. If there is an error on the card, such as your name or date of 
 		birth, you also have 90 days to report it. </p>
 	  <h3>Expiry of Account</h3>
@@ -149,17 +150,17 @@ function mhHover(tbl, idx, cls)
 		<td align="center" class="footer"><font size="3"><strong>Toll-free: 1-866-688-2628<br>
 			Email: <a href="mailto:info@boaterexam.com">info@boaterexam.com</a> </strong></font></td>
 		<td align="center" class="footer">Monday - Friday 9AM - 9PM EST<br>
-			Saturday &amp; Sunday 10 AM - 5PM EST<br>
+			Saturday &amp; Sunday Noon - 5PM EST<br>
 			Closed on holidays </td>
 	</tr>
 </tbody></table>
 <p align="CENTER" class="footer">BoaterExam.com is an authorized agent of <a href="http://clnc-fncc.com" target="_blank"> Forensic and Nautical Consultants of Canada Inc.</a><br>
 a Canadian Coast Guard approved course provider.</p>
 <p align="CENTER" class="footer"> © 2000-2004 Skipper Online Services (SOS) 
-	Inc. All rights reserved.<br>
+	Inc. All rights reserved. <a href="/sitemap1.html">Site Map</a><br>
 	BoaterExam.com is a registered trademark of Skipper Online Services (SOS) Inc.<br>
 	Your use of this site constitutes acceptance of the BoaterExam.com <a href="/privacy1.html">Terms 
-	of Use &amp; Privacy Policy</a>.</p>
+of Use &amp; Privacy Policy</a></p>
 <!-- #EndLibraryItem -->
 <!-- #EndTemplate -->
 </body></html>
