--- a/u/us/use/usenix.org.html
+++ b/u/us/use/usenix.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the usenix.org privacy policy that was archived on 2004-06-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040607033402id_/http%3A//www.usenix.org/membership/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the usenix.org privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207211118id_/http%3A//www.usenix.org/membership/privacy.html) for the most accurate reproduction.-->
 
 <html><head><title>USENIX - USENIX/SAGE Membership - Privacy Statement</title>
 <script language="Javascript" src="/page.js"><!-- // PAGE 1.0
@@ -67,11 +67,17 @@ iover() { ; } iout() { ; }
 <tr><td colspan="2"><img src="/graphics/dot_clear.gif" width="1" height="4" border="0" alt=""></td></tr>
 </tbody></table>
 </td></tr>
+<tr><td valign="top"><font face="Arial,Helvetica,sans-serif"><b>•</b></font>&nbsp;</td><td valign="top"><font size="-1" face="Arial,Helvetica,sans-serif"><b><a href="https://db.usenix.org/cgi-bin/auth/forgotten.cgi">Forgot Your Password?</a></b></font></td></tr>
+<tr><td colspan="2"><img src="/graphics/dot_clear.gif" width="1" height="4" border="0" alt=""></td></tr>
 <tr><td valign="top"><font face="Arial,Helvetica,sans-serif"><b>•</b></font>&nbsp;</td><td valign="top"><font size="-1" face="Arial,Helvetica,sans-serif"><b><a href="https://db.usenix.org/cgi-bin/memb/memb.cgi">Renew Your Membership</a></b></font></td></tr>
 <tr><td colspan="2"><img src="/graphics/dot_clear.gif" width="1" height="4" border="0" alt=""></td></tr>
 <tr><td valign="top"><font face="Arial,Helvetica,sans-serif"><b>•</b></font>&nbsp;</td><td valign="top"><font size="-1" face="Arial,Helvetica,sans-serif"><b><a href="https://db.usenix.org/cgi-bin/memb/memb.cgi?action=update">Update Your Contact Info</a></b></font></td></tr>
 <tr><td colspan="2"><img src="/graphics/dot_clear.gif" width="1" height="4" border="0" alt=""></td></tr>
+<tr><td valign="top"><font face="Arial,Helvetica,sans-serif"><b>•</b></font>&nbsp;</td><td valign="top"><font size="-1" face="Arial,Helvetica,sans-serif"><b><a href="https://db.usenix.org/cgi-bin/memb/cardverify.cgi">Print Your Membership Card</a></b></font></td></tr>
+<tr><td colspan="2"><img src="/graphics/dot_clear.gif" width="1" height="4" border="0" alt=""></td></tr>
 <tr><td valign="top"><font face="Arial,Helvetica,sans-serif"><b>•</b></font>&nbsp;</td><td valign="top"><font size="-1" face="Arial,Helvetica,sans-serif"><b><a href="https://db.usenix.org/membership/currentinfo/chpasswd.html">Change Your Password</a></b></font></td></tr>
+<tr><td colspan="2"><img src="/graphics/dot_clear.gif" width="1" height="4" border="0" alt=""></td></tr>
+<tr><td valign="top"><font face="Arial,Helvetica,sans-serif"><b>•</b></font>&nbsp;</td><td valign="top"><font size="-1" face="Arial,Helvetica,sans-serif"><b><a href="specialdisc.html">Special Discounts</a></b></font></td></tr>
 <tr><td colspan="2"><img src="/graphics/dot_clear.gif" width="1" height="4" border="0" alt=""></td></tr>
 <tr><td valign="top"><font face="Arial,Helvetica,sans-serif"><b>•</b></font>&nbsp;</td><td valign="top"><font size="-1" face="Arial,Helvetica,sans-serif"><b><a href="buttons/index.html">USENIX Logo</a></b></font></td></tr>
 <tr><td colspan="2"><img src="/graphics/dot_clear.gif" width="1" height="4" border="0" alt=""></td></tr>
@@ -110,9 +116,9 @@ practices.
 The USENIX Association maintains member databases that contain mailing, billing, and member profile
 information, as well as a record of each member's product purchases and registrations for conferences.
 The information in these databases is used by authorized USENIX staff members to process orders; mail
-invoices, purchases, member benefits, renewal notices, and announcements; and respond to member inquiries. Member
-records are maintained as long as an individual is a USENIX member and for three years following a
-membership lapse. Purchase and registration databases may be retained for up to three years.
+invoices, member benefits, renewal notices, and announcements; and respond to member inquiries. Member
+records are maintained as long as an individual is a USENIX member and for five years following a
+membership lapse. Purchase and registration databases may be retained for up to five years.
 </font></p><p><font size="-1" face="verdana, arial, helvetica, sans-serif">
 USENIX logs all accesses from your IP address to our Web site, and summary information derived from
 these logs may be displayed on the Web.
@@ -121,7 +127,7 @@ Personal information is stored in a relational database and standard security me
 We require confirmation of identity before releasing information back to the user for update over the
 Web.
 </font></p><p><font size="-1" face="verdana, arial, helvetica, sans-serif">
-Commercial information (such as credit card numbers) is obtained using our secure Web server. We assiduously avoid storing complete credit card information on our machines. If it is necessary to store sensitive data, we use public key encryption on it and
+Commercial information (such as credit card numbers) is obtained using our secure Web server. We do not store complete credit card information on our machines. If it is necessary to store sensitive data, we use public key encryption on it and
 require our staff to supply a private key to decrypt it. When passing such information internally over the
 Internet, we use our secure server.
 </font></p><p><font size="-1" face="verdana, arial, helvetica, sans-serif">
