--- a/a/au/aud/audio4fun.com.html
+++ b/a/au/aud/audio4fun.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the audio4fun.com privacy policy that was archived on 2004-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040602191656id_/http%3A//www.audio4fun.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the audio4fun.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207212033id_/http%3A//www.audio4fun.com/adlines.php%3Fid%3D111) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -11,6 +11,7 @@
 </head>
 
 <body topmargin="0" leftmargin="0" marginheight="0" marginwidth="0" bgcolor="#EAEAEA" vlink="#0000FF">
+<center>
   <table border="0" cellpadding="0" cellspacing="0" width="780" style="border-collapse: collapse" bordercolor="#111111">
     <tbody><tr>
       <td width="379" bgcolor="#FFFFFF" valign="top" style="border-style: solid; border-width: 0">
@@ -284,6 +285,7 @@
   </tbody></table>
 
 
+</center>
 
 
 </body></html>
